--- a/src/component/homePage/homePage.css
+++ b/src/component/homePage/homePage.css
@@ -7,5 +7,33 @@ body {
   background-color: white;
   border-radius: 15px;
   padding: 1em;
+  text-align: center;
+}
+
+button {
+  list-style: none;
+  background-color: rgba(17, 209, 69, 0.95);
+  padding: 10px;
+  border-radius: 5px;
+  color: White;
+  text-transform: capitalize;
+  margin: 0.4em;
+  -webkit-box-shadow: 0px 0px 0.95px 0.95px rgba(17, 209, 69, 0.95);
+          box-shadow: 0px 0px 0.95px 0.95px rgba(17, 209, 69, 0.95);
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.levelSelection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.header h1 {
+  font-size: 25px;
 }
 /*# sourceMappingURL=homePage.css.map */
