--- a/src/component/level/level.scss
+++ b/src/component/level/level.scss
@@ -22,6 +22,24 @@ body{
         width: 80%;
         flex-wrap: wrap;
         margin: auto;
+        justify-content: center;
     }
 }
 
+.time {
+    letter-spacing: 3px;
+
+    span {
+        letter-spacing: 1px;
+    }
+}
+
+.calcul{
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin-bottom: 1em;
+}
+.time {
+    margin-top: 1em;
+    font-size: 20px;
+}
