--- a/src/component/square/square.css
+++ b/src/component/square/square.css
@@ -1,6 +1,11 @@
 .square {
   width: 50px;
-  height: 50px;
-  border: 1px solid black;
+  border: 2px solid rgba(255, 127, 39, 0.95);
+  border-radius: 5px;
+  background-color: white;
+  font-size: 22px;
+  margin: 0.03em;
+  font-weight: 600;
+  padding: 0.15em;
 }
 /*# sourceMappingURL=square.css.map */
