--- a/src/component/square/square.scss
+++ b/src/component/square/square.scss
@@ -1,5 +1,19 @@
+
+$greenColor: rgba(17, 209, 69, 0.95);
+$trueGreen : rgba(27, 179, 159, 1);
+$greenLessColor : rgba(27, 179, 159, 0.1);
+$orange : rgba(255, 127, 39, 0.95);
+$yellow : rgba(255,202,24, 1);
+
 .square {
+
     width: 50px;
-    height: 50px;
-    border: 1px solid black;
+    border: 2px solid $orange;
+    border-radius: 5px;
+    background-color: white;
+    font-size: 22px;
+    margin: 0.03em;
+    font-weight: 600;
+    padding: 0.15em;
+    
 }
